--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Load .env file
         uses: cardinalby/export-env-action@v2
         with:
-          envFile: .env
+          envFile: ./apps/console/.env
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -120,7 +120,7 @@ jobs:
       - name: Load .env file (base)
         uses: cardinalby/export-env-action@v2
         with:
-          envFile: .env
+          envFile: ./apps/console/.env
 
       - name: Launch Instill Base (latest)
         run: |
@@ -140,7 +140,7 @@ jobs:
       - name: Load .env file (vdp)
         uses: cardinalby/export-env-action@v2
         with:
-          envFile: .env
+          envFile: ./apps/console/.env
 
       - name: Launch Instill VDP (latest)
         run: |
