--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -7,15 +7,10 @@
   "license": "Elastic License 2.0",
   "private": false,
   "scripts": {
-    "docker-build": "./scripts/docker-build.sh",
-    "docker-run": "./scripts/docker-run.sh",
-    "docker-build-test": "./scripts/docker-build-test.sh",
-    "docker-run-test": "./scripts/docker-run-test.sh",
-    "docker:prune-cache": "docker buildx prune",
     "dev": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --passWithNoTests",
+    "test": "echo 'wip'",
     "prepare": "node -e \"if (process.env.NODE_ENV === 'production'){process.exit(1)} \" || husky install",
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check",
@@ -69,30 +64,19 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
     "@next/env": "^12.2.3",
     "@playwright/test": "^1.35.1",
-    "@testing-library/dom": "^8.16.0",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/cookie": "^0.5.1",
-    "@types/jest": "^28.1.6",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "dotenv": "^16.0.1",
     "eslint": "^8.13.0",
-    "jest": "^27.5.1",
     "js-yaml": "^4.1.0",
     "lint-staged": ">=10",
     "npm-run-all": "^4.1.5",
