--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -65,7 +65,7 @@
   },
   "devDependencies": {
     "@next/env": "^13.5.0",
-    "@playwright/test": "^1.35.1",
+    "@playwright/test": "1.39.0",
     "@types/cookie": "^0.5.1",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
