--- a/release-please/config.json
+++ b/release-please/config.json
@@ -1,4 +1,5 @@
 {
+  "last-release-sha": "8e065c08042dc4df22756ca96ea1a946668b86bf",
   "packages": {
     "apps/console": {
       "release-type": "node",
