--- a/release-please/manifest.json
+++ b/release-please/manifest.json
@@ -1,1 +1,1 @@
-{"console": "0.30.0-alpha","packages/design-system":"0.55.7","packages/design-tokens":"0.3.2","packages/eslint-config-cortex":"0.5.0","packages/prettier-config-cortex":"0.0.0","packages/toolkit":"0.69.0"}
+{"apps/console": "0.30.0-alpha","packages/design-system":"0.55.7","packages/design-tokens":"0.3.2","packages/eslint-config-cortex":"0.5.0","packages/prettier-config-cortex":"0.0.0","packages/toolkit":"0.69.0"}
