--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -22,6 +22,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v3
         with:
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: instill/console:latest
@@ -79,11 +80,13 @@ jobs:
       - name: Download airbyte icons
         if: github.event_name == 'release'
         run: pnpm download-airbyte-icons
+        working-directory: ./apps/console
 
       - name: Build and push (release)
         if: github.event_name == 'release'
         uses: docker/build-push-action@v3
         with:
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: instill/console:${{steps.set_version.outputs.no_v_tag}}
