fix: fix images retrieve airbytes icon issue

--- a/release-please/config.json
+++ b/release-please/config.json
@@ -3,8 +3,7 @@
   "packages": {
     "apps/console": {
       "release-type": "node",
-      "package-name": "console",
-      "component": "console", 
+      "package-name": "",
       "draft": false,
       "prerelease": true,
       "bump-minor-pre-major": true,
