--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -4,24 +4,25 @@ on:
   workflow_call:
   release:
     types: [published]
-    paths-ignore:
-      - "packages/**"
 
 jobs:
   docker-hub:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
+        # Only console released tag is starting with v, others are starting with @
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/login-action@v1
         with:
           username: dropletbot
           password: ${{ secrets.botDockerHubPassword }}
 
       - name: Build and push (latest)
-        if: github.ref == 'refs/heads/main'
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -32,7 +33,7 @@ jobs:
           cache-to: type=registry,ref=instill/console:buildcache,mode=max
 
       - name: Set Versions
-        if: github.event_name == 'release'
+        if: github.event_name == 'release' && ${{ startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/github-script@v6
         id: set_version
         with:
@@ -43,17 +44,17 @@ jobs:
             core.setOutput('no_v_tag', no_v_tag)
 
       - name: Checkout
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/checkout@v3
 
       - name: Setup node
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
       - uses: pnpm/action-setup@v2.0.1
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         name: Install pnpm
         id: pnpm-install
         with:
@@ -61,13 +62,13 @@ jobs:
           run_install: false
 
       - name: Get pnpm store directory
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         id: pnpm-cache
         run: |
           echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
 
       - uses: actions/cache@v3
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         name: Setup pnpm cache
         with:
           path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
@@ -76,11 +77,11 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         run: rm -rf node_modules && pnpm i --frozen-lockfile
 
       - name: Build and push (release)
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/build-push-action@v3
         with:
           context: .
