--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -12,8 +12,31 @@ jobs:
   build-push-image:
     if: github.ref == 'refs/heads/main'
     name: Build and push image
-    uses: instill-ai/console/.github/workflows/images.yml@main
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: dropletbot
+          password: ${{ secrets.botDockerHubPassword }}
+
+      - name: Build and push (latest)
+        if: github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: instill/console:latest
+          cache-from: type=registry,ref=instill/console:buildcache
+          cache-to: type=registry,ref=instill/console:buildcache,mode=max
+
   base:
     needs: build-push-image
     if: github.ref == 'refs/heads/main'
