--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -10,18 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
+        # Only console released tag is starting with v, others are starting with @
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/login-action@v1
         with:
           username: dropletbot
           password: ${{ secrets.botDockerHubPassword }}
 
       - name: Build and push (latest)
-        if: github.ref == 'refs/heads/main'
+        if: ${{ (github.ref == 'refs/heads/main') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/build-push-action@v3
         with:
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: instill/console:latest
@@ -29,7 +33,7 @@ jobs:
           cache-to: type=registry,ref=instill/console:buildcache,mode=max
 
       - name: Set Versions
-        if: github.event_name == 'release'
+        if: github.event_name == 'release' && ${{ startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/github-script@v6
         id: set_version
         with:
@@ -40,17 +44,17 @@ jobs:
             core.setOutput('no_v_tag', no_v_tag)
 
       - name: Checkout
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/checkout@v3
 
       - name: Setup node
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
       - uses: pnpm/action-setup@v2.0.1
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         name: Install pnpm
         id: pnpm-install
         with:
@@ -58,13 +62,13 @@ jobs:
           run_install: false
 
       - name: Get pnpm store directory
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         id: pnpm-cache
         run: |
           echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
 
       - uses: actions/cache@v3
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         name: Setup pnpm cache
         with:
           path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
@@ -73,17 +77,26 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         run: rm -rf node_modules && pnpm i --frozen-lockfile
 
-      - name: Download airbyte icons
-        if: github.event_name == 'release'
-        run: pnpm download-airbyte-icons
+      - name: Set up Docker Buildx
+        # Only console released tag is starting with v, others are starting with @
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
+        uses: docker/login-action@v1
+        with:
+          username: dropletbot
+          password: ${{ secrets.botDockerHubPassword }}
 
       - name: Build and push (release)
-        if: github.event_name == 'release'
+        if: ${{ (github.event_name == 'release') && startsWith(github.event.release.tag_name, 'v') }}
         uses: docker/build-push-action@v3
         with:
+          context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: instill/console:${{steps.set_version.outputs.no_v_tag}}
