--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -29,8 +29,8 @@
   "license": "Apache-2.0",
   "private": false,
   "devDependencies": {
-    "@instill-ai/prettier-config-cortex": "workspace:*",
     "@instill-ai/eslint-config-cortex": "workspace:*",
+    "@instill-ai/prettier-config-cortex": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
     "@types/json-schema": "^7.0.14",
@@ -65,7 +65,10 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.2",
-    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.1.1",
     "@instill-ai/design-system": "workspace:*",
     "@instill-ai/design-tokens": "workspace:*",
