--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -77,6 +77,8 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.9.3",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.3.4",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
