--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -77,8 +77,16 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.9.3",
+    "@tiptap/extension-blockquote": "^2.1.12",
+    "@tiptap/extension-bullet-list": "^2.1.12",
+    "@tiptap/extension-document": "^2.1.12",
+    "@tiptap/extension-hard-break": "^2.1.12",
+    "@tiptap/extension-heading": "^2.1.12",
+    "@tiptap/extension-list-item": "^2.1.12",
+    "@tiptap/extension-ordered-list": "^2.1.12",
+    "@tiptap/extension-paragraph": "^2.1.12",
+    "@tiptap/extension-text": "^2.1.12",
     "@tiptap/react": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.3.4",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
@@ -86,6 +94,8 @@
     "elkjs": "^0.8.2",
     "fuse.js": "^6.6.2",
     "immer": "^9.0.19",
+    "prosemirror-markdown": "^1.11.2",
+    "prosemirror-model": "^1.19.3",
     "react-hook-form": "^7.45.0",
     "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.8.3",
