--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -87,6 +87,7 @@
     "@tiptap/extension-paragraph": "^2.1.12",
     "@tiptap/extension-text": "^2.1.12",
     "@tiptap/react": "^2.1.12",
+    "@types/lodash.isequal": "^4.5.8",
     "axios": "^1.3.4",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
@@ -94,6 +95,7 @@
     "elkjs": "^0.8.2",
     "fuse.js": "^6.6.2",
     "immer": "^9.0.19",
+    "lodash.isequal": "^4.5.0",
     "prosemirror-markdown": "^1.11.2",
     "prosemirror-model": "^1.19.3",
     "react-hook-form": "^7.45.0",
