--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -25,6 +25,13 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "prettier": "@instill-ai/prettier-config-cortex",
   "license": "Apache-2.0",
   "private": false,
@@ -65,6 +72,8 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.2",
+    "@codemirror/lang-markdown": "^6.2.2",
+    "@codemirror/view": "^6.22.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -89,6 +98,8 @@
     "@tiptap/extension-text": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@types/lodash.isequal": "^4.5.8",
+    "@uiw/codemirror-theme-github": "^4.21.20",
+    "@uiw/react-codemirror": "^4.21.20",
     "axios": "^1.3.4",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
