--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@codemirror/lang-markdown": "^6.2.2",
     "@codemirror/view": "^6.22.0",
     "@dnd-kit/core": "^6.1.0",
