--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -34,6 +34,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
     "@types/json-schema": "^7.0.14",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^18.14.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "18.2.0",
@@ -90,6 +91,7 @@
     "@tiptap/extension-ordered-list": "^2.1.12",
     "@tiptap/extension-paragraph": "^2.1.12",
     "@tiptap/extension-text": "^2.1.12",
+    "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.12",
     "@types/lodash.isequal": "^4.5.8",
     "@uiw/codemirror-theme-github": "^4.21.20",
@@ -102,6 +104,7 @@
     "fuse.js": "^6.6.2",
     "immer": "^9.0.19",
     "lodash.isequal": "^4.5.0",
+    "markdown-it": "^13.0.2",
     "markdown-to-jsx": "^7.3.2",
     "prosemirror-markdown": "^1.11.2",
     "prosemirror-model": "^1.19.3",
