--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -83,13 +83,19 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.9.3",
     "@tiptap/extension-blockquote": "^2.1.12",
+    "@tiptap/extension-bold": "^2.1.13",
     "@tiptap/extension-bullet-list": "^2.1.12",
+    "@tiptap/extension-code": "^2.1.13",
     "@tiptap/extension-document": "^2.1.12",
     "@tiptap/extension-hard-break": "^2.1.12",
     "@tiptap/extension-heading": "^2.1.12",
+    "@tiptap/extension-horizontal-rule": "^2.1.13",
+    "@tiptap/extension-italic": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
     "@tiptap/extension-list-item": "^2.1.12",
     "@tiptap/extension-ordered-list": "^2.1.12",
     "@tiptap/extension-paragraph": "^2.1.12",
+    "@tiptap/extension-strike": "^2.1.13",
     "@tiptap/extension-text": "^2.1.12",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.12",
