--- a/turbo.json
+++ b/turbo.json
@@ -16,5 +16,5 @@
       "dependsOn": ["build"]
     }
   },
-  "globalEnv": ["NEXT_PUBLIC_API_VERSION","NODE_ENV","NEXT_PUBLIC_API_GATEWAY_URL","NEXT_SERVER_API_GATEWAY_URL"]
+  "globalEnv": ["NEXT_PUBLIC_GENERAL_API_VERSION","NEXT_PUBLIC_MODEL_API_VERSION","NODE_ENV","NEXT_PUBLIC_API_GATEWAY_URL","NEXT_SERVER_API_GATEWAY_URL"]
 }
