chore: add format:check and excute format check on PRs
Signed-off-by: Hung-Han (Henry) Chen <chenhungh@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docker:prune-cache": "docker buildx prune",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "test": "turbo run test",
     "ci-build-packages": "turbo run build lint test",
