--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -51,5 +51,8 @@ jobs:
       - name: Run linter
         run: pnpm lint
 
+      - name: Run prettier
+        run: pnpm format:check
+
       - name: Run tests
         run: pnpm test
