--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "docker:prune-cache": "docker buildx prune",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "format": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "turbo run test",
     "ci-build-packages": "turbo run build lint test",
     "ci-build-storybook": "turbo run build --filter=@instill-ai/design-tokens --filter=@instill-ai/design-system",
