--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -96,6 +96,7 @@
     "@tiptap/extension-list-item": "^2.1.12",
     "@tiptap/extension-ordered-list": "^2.1.12",
     "@tiptap/extension-paragraph": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/extension-strike": "^2.1.13",
     "@tiptap/extension-text": "^2.1.12",
     "@tiptap/pm": "^2.1.13",
