--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -37,6 +37,7 @@
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^18.14.1",
     "@types/react": "^18.2.0",
+    "@types/react-avatar-editor": "^13.0.2",
     "@types/react-dom": "18.2.0",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/semver": "^7.5.3",
@@ -116,6 +117,7 @@
     "markdown-to-jsx": "^7.3.2",
     "prosemirror-markdown": "^1.11.2",
     "prosemirror-model": "^1.19.3",
+    "react-avatar-editor": "^13.0.2",
     "react-hook-form": "^7.45.0",
     "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.10.0",
