--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instill-ai/toolkit",
-  "version": "0.78.1",
+  "version": "0.78.2-rc.1",
   "description": "Instill AI's frontend toolkit",
   "repository": "https://github.com/instill-ai/design-system.git",
   "bugs": "https://github.com/instill-ai/design-system/issues",
@@ -31,7 +31,9 @@
   "devDependencies": {
     "@instill-ai/eslint-config-cortex": "workspace:*",
     "@instill-ai/prettier-config-cortex": "workspace:*",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^6.2.1",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/cookie": "^0.5.1",
     "@types/json-schema": "^7.0.14",
     "@types/markdown-it": "^13.0.7",
@@ -44,7 +46,7 @@
     "@types/simple-oauth2": "^5.0.2",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "esbuild": "^0.14.34",
     "eslint": "^8.35.0",
     "fast-glob": "^3.2.12",
@@ -60,7 +62,7 @@
     "tsup": "^6.7.0",
     "tsx": "^4.6.2",
     "typescript": "^5.1.0",
-    "vitest": "^0.29.2"
+    "vitest": "^1.2.1"
   },
   "publishConfig": {
     "access": "public"
