--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -17,7 +17,10 @@
     "prettier:check": "prettier --check",
     "lint": "next lint",
     "download-airbyte-icons": "node ./downloadAirbyteIcons.js",
-    "integration-test": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs && npx playwright test"
+    "e2e:env": "NEXT_ENV_UPDATE_ENV_FILE=false node next-env.mjs",
+    "e2e:local": "pnpm e2e:env && npx playwright test --project=chromium",
+    "e2e:first-time-login": "pnpm e2e:env && npx playwright test --project=first-time-login",
+    "e2e:ci": "pnpm e2e:env && pnpm e2e:first-time-login && npx playwright test --project=chromium --project=firefox --project=webkit"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.9.1",
@@ -66,7 +69,7 @@
   },
   "devDependencies": {
     "@next/env": "^13.5.0",
-    "@playwright/test": "1.39.0",
+    "@playwright/test": "1.41.1",
     "@types/cookie": "^0.5.1",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^17.0.22",
