--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -105,8 +105,7 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.12",
     "@types/lodash.isequal": "^4.5.8",
-    "@uiw/codemirror-theme-github": "^4.21.20",
-    "@uiw/react-codemirror": "^4.21.20",
+    "@uiw/react-json-view": "2.0.0-alpha.12",
     "axios": "^1.6.0",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
