--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["./setupTests.ts", "vitest.config.ts", "tsup.config.ts", "dist"]
+  "exclude": ["./setupTests.ts", "vitest.config.ts", "tsup.config.ts", "dist"],
 }
