--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -46,6 +46,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@instill-ai/eslint-config-cortex": "workspace:*",
     "@instill-ai/prettier-config-cortex": "workspace:*",
+    "@instill-ai/design-tokens": "workspace:*",
     "@playwright/test": "^1.20.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
