--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -104,6 +104,7 @@
     "@tiptap/extension-text": "^2.1.12",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.12",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.isequal": "^4.5.8",
     "@uiw/react-json-view": "2.0.0-alpha.12",
     "axios": "^1.6.0",
@@ -112,6 +113,7 @@
     "echarts": "^5.4.2",
     "elkjs": "^0.8.2",
     "immer": "^9.0.19",
+    "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "markdown-it": "^13.0.2",
     "markdown-to-jsx": "^7.3.2",
