--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -10,11 +10,12 @@
     "toolkit",
     "react"
   ],
+
   "scripts": {
     "test": "vitest --run --passWithNoTests",
-    "dev": "tsup src --watch",
+    "dev": "tsup --watch",
     "dev-ts": "tsc --watch --emitDeclarationOnly",
-    "build": "pnpm rimraf dist && tsup src && pnpm ts-types",
+    "build": "pnpm rimraf dist && tsup && pnpm ts-types",
     "ts-types": "tsc --emitDeclarationOnly",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --cache",
     "publish-rc": "pnpm build && pnpm publish --no-git-checks"
@@ -25,6 +26,18 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./server": {
+      "import": "./dist/server/index.mjs",
+      "require": "./dist/server/index.js",   
+      "types": "./dist/server/index.d.ts"
+    }
+  },
   "prettier": "@instill-ai/prettier-config-cortex",
   "license": "Apache-2.0",
   "private": false,
@@ -61,7 +74,7 @@
     "tailwindcss-animate": "^1.0.6",
     "tsup": "^6.7.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.0",
+    "typescript": "^5.4.2",
     "vitest": "^1.2.1"
   },
   "publishConfig": {
