--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -12,19 +12,38 @@
   ],
   "scripts": {
     "test": "vitest --run --passWithNoTests",
-    "dev": "tsup src --watch",
+    "dev": "tsup --watch",
     "dev-ts": "tsc --watch --emitDeclarationOnly",
-    "build": "pnpm rimraf dist && tsup src && pnpm ts-types",
+    "build": "pnpm rimraf dist && tsup && pnpm ts-types",
     "ts-types": "tsc --emitDeclarationOnly",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --cache",
     "publish-rc": "pnpm build && pnpm publish --no-git-checks"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "typings": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    },
+    "./server": {
+      "import": {
+        "types": "./dist/server/index.d.ts",
+        "default": "./dist/server/index.mjs"
+      },
+      "require": {
+        "types": "./dist/server/index.d.ts",
+        "default": "./dist/server/index.js"
+      }
+    }
+  },
   "prettier": "@instill-ai/prettier-config-cortex",
   "license": "Apache-2.0",
   "private": false,
@@ -43,7 +62,6 @@
     "@types/react-dom": "18.2.0",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/semver": "^7.5.3",
-    "@types/simple-oauth2": "^5.0.2",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.2.1",
@@ -55,13 +73,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "simple-oauth2": "^5.0.0",
     "stripe": "^13.7.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "tsup": "^6.7.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.0",
+    "typescript": "^5.4.2",
     "vitest": "^1.2.1"
   },
   "publishConfig": {
@@ -69,9 +86,6 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^1.10.2",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-markdown": "^6.2.2",
-    "@codemirror/view": "^6.22.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -106,7 +120,7 @@
     "@tiptap/react": "^2.1.12",
     "@types/lodash.debounce": "^4.0.9",
     "@types/lodash.isequal": "^4.5.8",
-    "@uiw/react-json-view": "2.0.0-alpha.12",
+    "@uiw/react-json-view": "2.0.0-alpha.18",
     "axios": "^1.6.0",
     "clsx": "^1.0.0",
     "cookie": "^0.5.0",
