fix: fix how we launch instill-core

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -137,7 +137,7 @@ jobs:
 
       - name: Launch Instill Core (latest)
         run: |
-          make latest BUILD=true EDITION=local-ce:test ITMODE_ENABLED=true INSTILL_CORE_HOST=api-gateway
+          make latest EDITION=local-ce:test RAY_LATEST_TAG=latest ITMODE_ENABLED=true INSTILL_CORE_HOST=api-gateway
 
       - name: Checkout
         uses: actions/checkout@v3
