fix: fix artifact

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -138,9 +138,11 @@ jobs:
             console-playwright:latest
 
       - name: Copy the test-result to host
+        if: always()
         run: docker cp console-integration-test:/app/apps/console/test-results ./test-results
 
       - name: Upload artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
