add prettier pre-commit format

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "turbo run test",
     "ci-build-packages": "turbo run build lint test",
     "ci-build-storybook": "turbo run build --filter=@instill-ai/design-tokens --filter=@instill-ai/design-system",
-    "prettier:fix": "prettier --write"  
+    "prettier:fix": "prettier --write"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
@@ -38,5 +38,8 @@
   "engines": {
     "node": ">=20.0.0"
   },
-  "packageManager": "pnpm@8.8.0"
+  "packageManager": "pnpm@8.8.0",
+  "lint-staged": {
+    "*.{ts,tsx}": "prettier --write"
+  }
 }
