--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "node": ">=20.0.0"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "prettier --write -u"
+    "**/*.{ts,tsx}": [
+      "prettier --write"
     ]
   },
   "packageManager": "pnpm@8.8.0"
